# CVSE-GatheringTools

./: .gitignore  .gitmodules  README.md  api_client.py  get_this_week.py  manually_edit_data.py  manually_get_data.py  manually_push_data.py  push_xlsx_data.py  push_xlsx_data_for_rechecked.py  pyproject.toml  utils.py
